--- a/index.html
+++ b/index.html
@@ -18,11 +18,8 @@
     <meta name="description" content="Personal website of Killmil Biratch">
     <meta name="keywords" content="Killmil, Biratch, Killmil Biratch, killmil, biratch, killmil biratch">
 
-    <!--link rel="prefetch" href="css/StylePc1080pDay.css">
-    <link rel="preload" href="css/StylePc1080pDay.css">
-    <link rel="prefetch" href="css/StylePc1080pNight.css">
-    <link rel="preload" href="css/StylePc1080pNight.css"-->
-
+    <link rel="preload" as="font" href="resources/fonts/iconfont.woff2" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" as="font" href="resources/fonts/RobotoMono-Regular.woff2" type="font/woff2" crossorigin="anonymous">
     <!--script src="js/loading.js" type="text/javascript"></script-->
     <script src="js/timeControlIndex.js" type="text/javascript"></script>
     <!--link rel="stylesheet" href="css/StylePc1080pDay.css"-->
