--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
     <meta name="description" content="Personal website of Killmil Biratch">
     <meta name="keywords" content="Killmil, Biratch, Killmil Biratch, killmil, biratch, killmil biratch">
 
-    <link rel="preload" as="font" href="resources/fonts/iconfont.woff2" type="font/woff2" crossorigin="anonymous">
-    <link rel="preload" as="font" href="resources/fonts/RobotoMono-Regular.woff2" type="font/woff2" crossorigin="anonymous">
-    <!--script src="js/loading.js" type="text/javascript"></script-->
+    <link rel="preload" as="font" href="resources/fonts/iconfont.woff" type="font/woff" crossorigin="anonymous">
+    <link rel="preload" as="font" href="resources/fonts/RobotoMono-Regular.woff" type="font/woff" crossorigin="anonymous">
+
     <script src="js/timeControlIndex.js" type="text/javascript"></script>
-    <!--link rel="stylesheet" href="css/StylePc1080pDay.css"-->
   </head>
   <body style="display: none;">
     <div class="div-root">
