--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <meta name="description" content="Personal website of Killmil Biratch">
     <meta name="keywords" content="Killmil, Biratch, Killmil Biratch, killmil, biratch, killmil biratch">
 
-    <link rel="preload" as="font" href="resources/fonts/iconfont.woff" type="font/woff" crossorigin="anonymous">
-    <link rel="preload" as="font" href="resources/fonts/RobotoMono-Regular.woff" type="font/woff" crossorigin="anonymous">
+    <link rel="preload" as="font" href="resources/fonts/iconfont.woff2" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" as="font" href="resources/fonts/RobotoMono-Regular.woff2" type="font/woff2" crossorigin="anonymous">
 
     <script src="js/timeControlIndex.js" type="text/javascript"></script>
   </head>
