--- a/project.html
+++ b/project.html
@@ -19,7 +19,7 @@
 
     <link rel="preload" href="css/StylePc1080pDay.css">
     <link rel="preload" href="css/StylePc1080pNight.css">
-    <link rel="preload" as="font" href="resources/fonts/Kalam-Regular.woff" type="font/woff" crossorigin="anonymous">
+    <link rel="preload" as="font" href="resources/fonts/Kalam-Regular.woff2" type="font/woff2" crossorigin="anonymous">
 
     <script src="js/timeControl.js" type="text/javascript"></script>
   </head>
