--- a/htmls/Blogs/FastWriterAFWB/20230124Fast.html
+++ b/htmls/Blogs/FastWriterAFWB/20230124Fast.html
@@ -59,6 +59,10 @@
             <p>3</p>
           </div>
         </div-->
+        <p id="div-root-content-Content-text"><b>2023-02-07 V.alpha 0.4</b></p>
+        <p id="div-root-content-Content-text">To match different .css files, the software can now customize the text prefixes or identifiers by opening "Settings>>Prefixes or identifiers" and changing the corresponding values (image prefixes or identifiers are currently not customizable, as they may cause (The prefixes or identifiers of the images cannot be customized at the moment because they may cause the software to run unstably).</p>
+        <p id="div-root-content-Content-text"><b><i>Attachments and downloadable files</i></b></p>
+        <p id="div-root-content-Content-attachmentEND"><a href="../../../resources/Attachments/blogs/20230207Fast/FW v0.4.5.04Setup.msi"><i>Software Installation File (V.alpha 0.4)</i></a></p>
         <p id="div-root-content-Content-text"><b>2023-01-30 V.alpha 0.3</b></p>
         <p id="div-root-content-Content-text">The source program has been optimized and the software now runs 20% faster compared to the previous version.</p>
         <p id="div-root-content-Content-text"><b><i>Attachments and downloadable files</i></b></p>
