--- a/htmls/Blogs/CSSQAS/20230204CSS.html
+++ b/htmls/Blogs/CSSQAS/20230204CSS.html
@@ -59,12 +59,15 @@
             <p>3</p>
           </div>
         </div-->
-        <p id="div-root-content-Content-text"><b>2023-02-05 V 1.0</b></p>
+        <p id="div-root-content-Content-text"><b>2023-02-04 V 1.0.1</b></p>
+        <p id="div-root-content-Content-text">The structure of the program was reorganized and now the program is used to process the .css file and can easily remove some unnecessary newline characters.</p>
+        <p id="div-root-content-Content-attachmentEND"><a href="../../../resources/Attachments/blogs/20230218CSS/CSS quick alignment software v1.0.1.exe"><i>Software Installation File (V 1.0.1)</i></a></p>
+        <p id="div-root-content-Content-text"><b>2023-02-04 V 1.0.0</b></p>
         <p id="div-root-content-Content-text">When writing .css files, the files are often too large due to irregular writing and too much irrelevant content, which will take more time to read and often cause some problems in the actual use.</p>
         <p id="div-root-content-Content-text">So, I have written a script software based on Python language. With this software, some unnecessary content (such as indentation characters, extra spaces, duplicate symbols, and blank lines) can be removed from the .css file to reduce the file size and increase readability.</p>
         <p id="div-root-content-Content-text">The software is simple to use, just run the executable and select the .css file to be revised in the file selection dialog. When the "The work is done." message box pops up, it means the execution is successful.</p>
         <p id="div-root-content-Content-text"><b><i>Attachments and downloadable files</i></b></p>
-        <p id="div-root-content-Content-attachmentEND"><a href="../../../resources/Attachments/blogs/20230204CSS/CSS quick alignment software v1.0.exe"><i>Software Installation File (V 1.0)</i></a></p>
+        <p id="div-root-content-Content-attachmentEND"><a href="../../../resources/Attachments/blogs/20230204CSS/CSS quick alignment software v1.0.exe"><i>Software Installation File (V 1.0.0)</i></a></p>
       </div>
     </div>
   </body>
