--- a/htmls/Blogs/FastWriterAFWB/20230124Fast.html
+++ b/htmls/Blogs/FastWriterAFWB/20230124Fast.html
@@ -63,7 +63,7 @@
         <p id="div-root-content-Content-text">A new "&lt;ATTACHMENT&gt;" prefix has been added to the "Blog" category, which is used to insert downloadable content.</p>
         <p id="div-root-content-Content-text">Also, the prefix identifier start ("&lt;") and end ("&gt;") in the text input box has been replaced with "//" and the prefix is now case-insensitive, i.e. With the "comment" prefix you only need to enter "//NOTE//" (or "//note//"), and with the "image " prefix is "//IMAGE//" (or "//image//"), and the "downloadable content" prefix is Enter "//ATTACHMENT//" (or "//attachment//").</p>
         <p id="div-root-content-Content-text"><b><i>Attachments and downloadable files</i></b></p>
-        <p id="div-root-content-Content-attachmentEND"><a href="../../../resources/Attachments/blogs/20230207Fast/FW v0.4.5.04Setup.msi"><i>Software Installation File (V.alpha 0.4)</i></a></p>
+        <p id="div-root-content-Content-attachmentEND"><a href="../../../resources/Attachments/blogs/20230415Fast/FW v0.5.9.05Setup.msi"><i>Software Installation File (V.alpha 0.5)</i></a></p>
         <p id="div-root-content-Content-text"><b>2023-02-07 V.alpha 0.4</b></p>
         <p id="div-root-content-Content-text">To match different .css files, the software can now customize the text prefixes or identifiers by opening "Settings>>Prefixes or identifiers" and changing the corresponding values (image prefixes or identifiers are currently not customizable, as they may cause (The prefixes or identifiers of the images cannot be customized at the moment because they may cause the software to run unstably).</p>
         <p id="div-root-content-Content-text"><b><i>Attachments and downloadable files</i></b></p>
@@ -71,7 +71,7 @@
         <p id="div-root-content-Content-text"><b>2023-01-30 V.alpha 0.3</b></p>
         <p id="div-root-content-Content-text">The source program has been optimized and the software now runs 20% faster compared to the previous version.</p>
         <p id="div-root-content-Content-text"><b><i>Attachments and downloadable files</i></b></p>
-        <p id="div-root-content-Content-attachmentEND"><a href="../../../resources/Attachments/blogs/20230130Fast/FW v0.3.3.03Setup.msi"><i>Software Installation File (V.alpha 0.3)</i></a></p>
+        <p id="div-root-content-Content-attachmentEND"><i><del>Installation File (V.alpha 0.3)</del></i></a></p>
         <p id="div-root-content-Content-text"><b>2023-01-27 V.alpha 0.2</b></p>
         <p id="div-root-content-Content-text">The software can now rebuild the workbench without rebooting. For example, after generating a file in ".html" format, you can click the "New" button to create a new workbench immediately, instead of having to exit the software first.</p>
         <p id="div-root-content-Content-text"><b><i>Attachments and downloadable files</i></b></p>
