--- a/htmls/projects/KTS/20220603K.html
+++ b/htmls/projects/KTS/20220603K.html
@@ -60,7 +60,11 @@
           </tr>
           <!--tr>
             <td><b>Installation file download</b></td>
-            <td colspan="3"><a href="../../../resources/Attachments/projects/20220418K/KTsetup-V1.0.0.msi"><i>KT V1.0 Setup.msi</i></a></td>
+            <td colspan="3"><a href=""><i></i></a></td>
+          </tr>
+          <tr>
+            <td><b>View online</b></td>
+            <td colspan="3"><a href=""><i></i></a></td>
           </tr-->
           </table>
         </div>
