--- a/htmls/projects/RoboticAHCVMS/20210915Robotic.html
+++ b/htmls/projects/RoboticAHCVMS/20210915Robotic.html
@@ -60,7 +60,11 @@
           </tr>
           <!--tr>
             <td><b>Installation file download</b></td>
-            <td colspan="3"></td>
+            <td colspan="3"><a href=""><i></i></a></td>
+          </tr>
+          <tr>
+            <td><b>View online</b></td>
+            <td colspan="3"><a href=""><i></i></a></td>
           </tr-->
           </table>
         </div>
