--- a/htmls/Blogs/CSSQAS/20230218CSS.html
+++ b/htmls/Blogs/CSSQAS/20230218CSS.html
@@ -52,15 +52,9 @@
           </tr-->
           </table>
         </div>
-        <!--div class="div-root-content-Content-version"><p><b>▸Version</b></p>
-          <div class="div-root-content-Content-versionList">
-            <p>2023-01-19 Update</p>
-            <p>2</p>
-            <p>3</p>
-          </div>
-        </div-->
         <p id="div-root-content-Content-text"><b>2023-02-18 V 1.0.1</b></p>
         <p id="div-root-content-Content-text">The structure of the program was reorganized and now the program is used to process the .css file and can easily remove some unnecessary newline characters.</p>
+        <p id="div-root-content-Content-text"><b><i>Attachments and downloadable files</i></b></p>
         <p id="div-root-content-Content-attachmentEND"><a href="../../../resources/Attachments/blogs/20230218CSS/CSS quick alignment software v1.0.1.exe"><i>Software Installation File (V 1.0.1)</i></a></p>
         <p id="div-root-content-Content-text"><b>2023-02-04 V 1.0.0</b></p>
         <p id="div-root-content-Content-text">When writing .css files, the files are often too large due to irregular writing and too much irrelevant content, which will take more time to read and often cause some problems in the actual use.</p>
