--- a/htmls/Blogs/Tumbleweed/20230223Tumbleweed.html
+++ b/htmls/Blogs/Tumbleweed/20230223Tumbleweed.html
@@ -59,15 +59,21 @@
             <p>3</p>
           </div>
         </div-->
+        <p id="div-root-content-Content-text"><b>2023-07-27 V 1.1.0</b></p>
+        <p id="div-root-content-Content-text">The case marker has been rewritten and is now responsive and highly accurate in real time.</p>
+        <p id="div-root-content-Content-text">At the same time, a set of system-based real-time CPU and Mem usage displays have been added. This allows the software to provide more intuitive feedback on the status of the computer.</p>
+        <p id="div-root-content-Content-text">The software interface and display fonts are optimized to make the use process more convenient.</p>
+        <p id="div-root-content-Content-text"><b><i>Attachments and downloadable files</i></b></p>
+        <p id="div-root-content-Content-attachmentEND"><a href="../../../resources/Attachments/blogs/20230727Tumbleweed/Tumbleweed V1.1.0Setup.msi"><i>Software Installation File (V 1.1.0)</i></a></p>
         <p id="div-root-content-Content-text"><b>2023-02-23 V 1.0.0</b></p>
         <p id="div-root-content-Content-text">I wanted to add a detailed planner to my work schedule, so I wrote and developed this software.</p>
         <p id="div-root-content-Content-text">Unfortunately, the software is in its early stages and does not yet have full functionality, which will be added later.</p>
         <p id="div-root-content-Content-text">At the moment, the software can do a work time loop, which means that you can count down to a certain task to be completed, which is good for people with slight procrastination (like me), and it is easy to use. "Alt+C" will start the set countdown timer, after the countdown is over a window will pop up, the window shows the timer you set, it marks the end of the time (and perhaps the completion of the work).</p>
         <p id="div-root-content-Content-text">Perhaps you want to change the time setting or end the timer during the process, it's as easy as hitting "Alt+Q" to end the timer, no window will pop up, and the countdown counter will revert to the first set time.</p>
         <p id="div-root-content-Content-text">In addition, the software also has a case marker, which is very convenient for laptop users and users who do not have a capital keyboard light. I will try to rewrite this feature in C or C++, which is closer to the underlying language.</p>
-        <p id="div-root-content-Content-text">The software is currently open source using the MIT protocol, and you can easily find it on <a href="https://github.com/KILLMILEDC/Tumbleweed">Github</a>.</p>
+        <p id="div-root-content-Content-text">The software is currently open source using the MIT protocol.</p>
         <p id="div-root-content-Content-text"><b><i>Attachments and downloadable files</i></b></p>
-        <p id="div-root-content-Content-attachmentEND"><a href="../../../resources/Attachments/blogs/20230223Tumbleweed/Tumbleweed V1.0.0Setup.msi"><i>Software Installation File (V 1.0.0)</i></a></p>
+        <p id="div-root-content-Content-attachmentEND"><i><del>Software Installation File (V 1.0.0)</del></i></p>
       </div>
     </div>
   </body>
