--- a/htmls/projects/T/20230223T.html
+++ b/htmls/projects/T/20230223T.html
@@ -55,7 +55,7 @@
           </tr>
           <tr>
             <td><b>Proof of Copyright</b></td>
-            <td colspan="3"><a href="../../../resources/Attachments/projects/20230223T/20230223T-annex1.pdf"><i>Download attachment</i></a>&emsp;or&emsp;<a href=""><i>View online</i></a></td>
+            <td colspan="3"><a href="../../../resources/Attachments/projects/20230223T/20230223T-annex1.pdf"><i>Download attachment</i></a>&emsp;or&emsp;<a href="https://register.ccopyright.com.cn/publicInquiry.html?type=softList&registerNumber=2023SR0597170&keyWord=%E5%BC%A0%E7%90%9B&publicityType=ALL&registerDateType=ALL"><i>View online</i></a></td>
           </tr>
           <!--tr>
             <td><b>Installation file download</b></td>
