--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
   <body style="display: none;">
     <div class="div-root-about">
       <header>
-        <a href="index.html"><img src="resources/images/hh.JPG" width="250rem" height="250rem" oncontextmenu="return false"></a>
+        <a href="index.html"><img src="resources/images/hh.jpg" width="250rem" height="250rem" oncontextmenu="return false"></a>
         <div class="header-PersonalDetails">
           <p>Published name: <a href="index.html">killmil biratch</a></p>
           <p>Full name: Chen C'hang</p>
