--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
 
     <meta name="description" content="Personal website of Killmil Biratch">
 
+    <link rel="preload" as="image" href="resources/images/hh.jpg" type="image/jpg" crossorigin="anonymous">
     <link rel="preload" href="css/StylePc1080pDay.css">
     <link rel="preload" href="css/StylePc1080pNight.css">
 
