--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="description" content="Personal website of Killmil Biratch">
     <meta name="keywords" content="Killmil, Biratch, Killmil Biratch, killmil, biratch, killmil biratch">
 
-    <link rel="preload" as="image" href="resources/images/hh.jpg" type="image/jpg" crossorigin="anonymous">
+    <link rel="preload" as="image" href="resources/images/hh.jpg" type="image/jpeg" crossorigin="anonymous">
     <link rel="preload" as="font" href="resources/fonts/iconfont.woff2" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" as="font" href="resources/fonts/RobotoMono-Regular.woff2" type="font/woff2" crossorigin="anonymous">
 
