--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
   <body style="display: none;">
     <div class="div-root-about">
       <header>
-        <a href="index.html"><img src="resources/images/hh.jpg" width="250rem" height="250rem" oncontextmenu="return false"></a>
+        <a href="index.html"><img src="resources/images/hh.jpg" width="280rem" height="280rem" oncontextmenu="return false"></a>
         <div class="header-PersonalDetails">
           <p>Published name: <a href="index.html">killmil biratch</a></p>
           <p>Full name: Chen C'hang</p>
@@ -38,14 +38,16 @@
       <div class="div-root-about-EducationExperience">
         <h2 class="h2-about">Education Experience</h2>
         <div class="div-root-about-EducationExperience-Details">
-          <p><b><a href="http://www.nuc.edu.cn/">NORTH UNIVERSITY OF CHINA</a></b>&emsp;&emsp;Shanxi,China</p>
+          <p><b><a href="http://www.nuc.edu.cn/">NORTH UNIVERSITY OF CHINA</a></b></p>
+          <p>Shanxi,China</p>
           <p><i>Bachelor of Engineering</i></p>
-          <p>Research area: Robotics Engineering</p>
+          <p>Robotics Engineering</p>
         </div>
         <div class="div-root-about-EducationExperience-Details">
-          <p><b><a href="https://www.tyut.edu.cn/">TAIYUAN UNIVERSITY OF TECHNOLOGY</a></b>&emsp;&emsp;Shanxi,China</p>
+          <p><b><a href="https://www.tyut.edu.cn/">TAIYUAN UNIVERSITY OF TECHNOLOGY</a></b></p>
+          <p>Shanxi,China</p>
           <p><i>Bachelor of Engineering</i></p>
-          <p>Research area: Computer Science Technology</p>
+          <p>Computer Science Technology</p>
         </div>
       </div>
     </div>
