--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="keywords" content="Killmil, Biratch, Killmil Biratch, killmil, biratch, killmil biratch">
 
     <link rel="preload" as="image" href="resources/images/hh.jpg" type="image/jpeg" crossorigin="anonymous">
-    <link rel="preload" as="font" href="resources/fonts/iconfont.woff2" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" as="font" href="resources/fonts/MainIcon.woff2" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" as="font" href="resources/fonts/RobotoMono-Regular.woff2" type="font/woff2" crossorigin="anonymous">
 
     <script src="js/timeControlIndex.js" type="text/javascript"></script>
@@ -29,9 +29,9 @@
       <header>
         <h1 id="header-Title"><b>KILLMIL BIRATCH</b></h1>
         <div class="header-Contact">
-          <a id="iconfont" href="https://orcid.org/0000-0002-8286-4106">&#xe552;</a>
-          <a id="iconfont" href="https://github.com/KILLMILEDC">&#xe603;</a>
-          <a id="iconfont" href="mailto:killmiledc@outlook.com">&#xe610;</a>
+          <a id="MainIcon" href="https://orcid.org/0000-0002-8286-4106">&#xe552;</a>
+          <a id="MainIcon" href="https://github.com/KILLMILEDC">&#xe603;</a>
+          <a id="MainIcon" href="mailto:killmiledc@outlook.com">&#xe610;</a>
         </div>
       </header>
       <div class="div-root-Menu">
