--- a/research.html
+++ b/research.html
@@ -21,7 +21,7 @@
     <link rel="preload" href="css/StylePc1080pNight.css">
     <link rel="preload" as="font" href="resources/fonts/Kalam-Regular.woff2" type="font/woff2" crossorigin="anonymous">
 
-    <script src="js/timeControl.js" type="text/javascript"></script>
+    <script src="js/timeControlOther.js" type="text/javascript"></script>
   </head>
   <body class="body-others" style="display: none;">
     <div class="div-root-research">
