--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     <link rel="preload" href="css/StylePc1080pDay.css">
     <link rel="preload" href="css/StylePc1080pNight.css">
 
-    <script src="js/timeControl.js" type="text/javascript"></script>
+    <script src="js/timeControlOther.js" type="text/javascript"></script>
   </head>
   <body style="display: none;">
     <div class="div-root-about">
