--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
         <div class="div-root-about-EducationExperience-Details">
           <p><b><a href="https://www.tyut.edu.cn/">TAIYUAN UNIVERSITY OF TECHNOLOGY</a></b></p>
           <p>Shanxi,China</p>
-          <p><i>Bachelor of Engineering</i></p>
+          <p><i>Bachelor of Engineering (Self-E.)</i></p>
           <p>Computer Science Technology</p>
         </div>
       </div>
