--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     <link rel="preload" href="css/StylePc1080pDay.css">
     <link rel="preload" href="css/StylePc1080pNight.css">
 
-    <script src="js/timeControlOther.js" type="text/javascript"></script>
+    <script src="js/checkTheBrowserMainANDTimeControlMain.js" type="text/javascript"></script>
   </head>
   <body style="display: none;">
     <div class="div-root-about">
@@ -46,7 +46,7 @@
         <div class="div-root-about-EducationExperience-Details">
           <p><b><a href="https://www.tyut.edu.cn/">TAIYUAN UNIVERSITY OF TECHNOLOGY</a></b></p>
           <p>Shanxi,China</p>
-          <p><i>Bachelor of Engineering</i></p>
+          <p><i>Bachelor of Engineering (Self-E.)</i></p>
           <p>Computer Science Technology</p>
         </div>
       </div>
