--- a/htmls/projects/AutomaticDNT/20230207Automatic.html
+++ b/htmls/projects/AutomaticDNT/20230207Automatic.html
@@ -17,7 +17,7 @@
 
     <meta name="description" content="Personal website of Killmil Biratch">
 
-    <script src="../../../js/timeControl.js" type="text/javascript"></script>
+    <script src="../../../js/checkTheBrowserANDTimeControl.js" type="text/javascript"></script>
   </head>
   <body class="body-others" style="display: none;">
     <div class="div-root-content">
