--- a/htmls/researches/CurrentRSAFDDOAR/20220628Current.html
+++ b/htmls/researches/CurrentRSAFDDOAR/20220628Current.html
@@ -17,7 +17,7 @@
 
     <meta name="description" content="Personal website of Killmil Biratch">
 
-    <script src="../../../js/timeControl.js" type="text/javascript"></script>
+    <script src="../../../js/checkTheBrowserANDTimeControl.js" type="text/javascript"></script>
   </head>
   <body class="body-others" style="display: none;">
     <div class="div-root-content">
@@ -26,7 +26,7 @@
       </header>
       <div class="div-root-content-Content">
         <h3>Current research status and future development direction of agricultural robots</h3>
-        <p id="div-root-content-Content-abstract">2022-06-28 | Journal issue</p>
+        <p id="div-root-content-Content-abstract">2022-06-28 | Article</p>
         <div class="div-root-content-Content-table">
           <table>
             <tr>
