--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="preload" as="font" href="resources/fonts/MainIcon.woff2" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" as="font" href="resources/fonts/RobotoMono-Regular.woff2" type="font/woff2" crossorigin="anonymous">
 
-    <script src="js/timeControlIndex.js" type="text/javascript"></script>
+    <script src="js/checkTheBrowserIndexANDTimeControlIndex.js" type="text/javascript"></script>
   </head>
   <body style="display: none;">
     <div class="div-root">
