--- a/project.html
+++ b/project.html
@@ -29,13 +29,13 @@
         <h1><a href="index.html">Projects</a></h1>
       </header>
       <div class="div-root-project-Content">
-        <p id="div-root-project-Content-title">2023-02-23&emsp;&emsp;<a href="htmls/projects/Tumbleweed/menu.html"><b>Tumbleweed</b></a></p>
-        <p id="div-root-project-Content-title">2023-02-07&emsp;&emsp;<a href="htmls/projects/AutomaticDNT/menu.html"><b>Automatic document numbering tool</b></a></p>
-        <p id="div-root-project-Content-title">2023-02-04&emsp;&emsp;<a href="htmls/projects/CQA/menu.html"><b>CSS quick alignment</b></a></p>
-        <p id="div-root-project-Content-title">2022-09-03&emsp;&emsp;<a href="htmls/projects/LightTMLFFFRTS/menu.html"><b>Light text markup language format file fast retrieval translation software</b></a></p>
-        <p id="div-root-project-Content-title">2022-08-23&emsp;&emsp;<a href="htmls/projects/LightTMLFDSFCS/menu.html"><b>Light text markup language format dictionary search file compiler software</b></a></p>
-        <p id="div-root-project-Content-title">2022-06-03&emsp;&emsp;<a href="htmls/projects/KTS/menu.html"><b>K.Translation software</b></a></p>
-        <p id="div-root-project-Content-title">2021-03-28&emsp;&emsp;<a href="htmls/projects/CigaretteGFDDBOTPOAF/20210328Cigarette.html"><b>Cigarette gas filtration device designed based on the principle of air flow</b></a></p>
+        <p id="div-root-project-Content-title">2023-02-23&emsp;&emsp;<a href="htmls/projects/Tumbleweed/menu.html"><b>Tumbleweed</b></a><br><samp id="smap-software">software</samp>&emsp;</p>
+        <p id="div-root-project-Content-title">2023-02-07&emsp;&emsp;<a href="htmls/projects/AutomaticDNT/menu.html"><b>Automatic document numbering tool</b></a><br><samp id="smap-software">software</samp>&emsp;</p>
+        <p id="div-root-project-Content-title">2023-02-04&emsp;&emsp;<a href="htmls/projects/CQA/menu.html"><b>CSS quick alignment</b></a><br><samp id="smap-software">software</samp>&emsp;</p>
+        <p id="div-root-project-Content-title">2022-09-03&emsp;&emsp;<a href="htmls/projects/LightTMLFFFRTS/menu.html"><b>Light text markup language format file fast retrieval translation software</b></a><br><samp id="smap-software">software</samp>&emsp;</p>
+        <p id="div-root-project-Content-title">2022-08-23&emsp;&emsp;<a href="htmls/projects/LightTMLFDSFCS/menu.html"><b>Light text markup language format dictionary search file compiler software</b></a><br><samp id="smap-software">software</samp>&emsp;</p>
+        <p id="div-root-project-Content-title">2022-06-03&emsp;&emsp;<a href="htmls/projects/KTS/menu.html"><b>K.Translation software</b></a><br><samp id="smap-software">software</samp>&emsp;</p>
+        <p id="div-root-project-Content-title">2021-03-28&emsp;&emsp;<a href="htmls/projects/CigaretteGFDDBOTPOAF/20210328Cigarette.html"><b>Cigarette gas filtration device designed based on the principle of air flow</b></a><br><samp id="smap-patent">Patent</samp>&emsp;<smap id="smap-software-introduce">Introduce</smap>&emsp;</p>
       </div>
     </div>
   </body>
