--- a/htmls/projects/KTS/menu.html
+++ b/htmls/projects/KTS/menu.html
@@ -25,8 +25,8 @@
         <h1><a href="../../../project.html">Projects</a></h1>
       </header>
       <div class="div-root-project-Content">
-        <p id="div-root-project-Content-title">2022-06-03&emsp;&emsp;<a href="20220603K.html"><b>V1.1.3</b></a></p>
-        <p id="div-root-project-Content-title">2022-04-18&emsp;&emsp;<a href="20220418K.html"><b>V1.0.0</b></a></p>
+        <p id="div-root-project-Content-title">2022-06-03&emsp;&emsp;<a href="20220603K.html"><b>V1.1.3</b></a><br><smap id="smap-software-introduce">Introduce</smap>&emsp;</p>
+        <p id="div-root-project-Content-title">2022-04-18&emsp;&emsp;<a href="20220418K.html"><b>V1.0.0</b></a><br><smap id="smap-software-introduce">Introduce</smap>&emsp;</p>
       </div>
     </div>
   </body>
