--- a/htmls/projects/LightTMLFFFRTS/menu.html
+++ b/htmls/projects/LightTMLFFFRTS/menu.html
@@ -25,7 +25,7 @@
         <h1><a href="../../../project.html">Projects</a></h1>
       </header>
       <div class="div-root-project-Content">
-        <p id="div-root-project-Content-title">2022-09-03&emsp;&emsp;<a href="20220903Light.html"><b>V1.0.0</b></a></p>
+        <p id="div-root-project-Content-title">2022-09-03&emsp;&emsp;<a href="20220903Light.html"><b>V1.0.0</b></a><br><smap id="smap-software-introduce">Introduce</smap>&emsp;</p>
       </div>
     </div>
   </body>
