--- a/research.html
+++ b/research.html
@@ -29,7 +29,7 @@
         <h1><a href="index.html">Researches</a></h1>
       </header>
       <div class="div-root-research-Content">
-        <p id="div-root-research-Content-title">2022-06-28&emsp;&emsp;<a href="htmls/researches/CurrentRSAFDDOAR/20220628Current.html"><b>Current research status and future development direction of agricultural robots</b></a></p>
+        <p id="div-root-research-Content-title">2022-06-28&emsp;&emsp;<a href="htmls/researches/CurrentRSAFDDOAR/20220628Current.html"><b>Current research status and future development direction of agricultural robots</b></a><br><samp id="smap-article">Article</samp>&emsp;<samp id="smap-article-generalJournal">General-Journal</samp>&emsp;<samp id="smap-article-review">Review</samp>&emsp;<samp id="smap-article-unvalued">Unvalued</samp>&emsp;</p>
       </div>
     </div>
   </body>
