--- a/htmls/Blogs/Tumbleweed/20230223Tumbleweed.html
+++ b/htmls/Blogs/Tumbleweed/20230223Tumbleweed.html
@@ -59,6 +59,11 @@
             <p>3</p>
           </div>
         </div-->
+        <p id="div-root-content-Content-text"><b>2023-10-03 V 1.2.0</b></p>
+        <p id="div-root-content-Content-text">A 24-hour real-time computer clock has been added.</p>
+        <p id="div-root-content-Content-text">At the same time, some legacy vulnerabilities of the software have been fixed.</p>
+        <p id="div-root-content-Content-text"><b><i>Attachments and downloadable files</i></b></p>
+        <p id="div-root-content-Content-attachmentEND"><a href="../../../resources/Attachments/blogs/20231009Tumbleweed/Tumbleweed V1.2.0Setup.msi"><i>Software Installation File (V 1.2.0)</i></a></p>
         <p id="div-root-content-Content-text"><b>2023-07-27 V 1.1.0</b></p>
         <p id="div-root-content-Content-text">The case marker has been rewritten and is now responsive and highly accurate in real time.</p>
         <p id="div-root-content-Content-text">At the same time, a set of system-based real-time CPU and Mem usage displays have been added. This allows the software to provide more intuitive feedback on the status of the computer.</p>
