--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,7 @@
       <div class="div-root-blog-Content">
         <p id="div-root-blog-Content-title">2023-10-09&emsp;&emsp;<a href="htmls/Blogs/Tumbleweed/20230223Tumbleweed.html"><b>Tumbleweed</b></a><br><samp id="smap-software">software</samp>&emsp;<samp id="smap-detail">Detail</samp>&emsp;</p>
         <p id="div-root-blog-Content-title">2023-04-15&emsp;&emsp;<a href="htmls/Blogs/FastWriterAFWB/20230124Fast.html"><b>Fast Writer — a fast website builder</b></a><br><samp id="smap-software">software</samp>&emsp;<samp id="smap-detail">Detail</samp>&emsp;</p>
-        <p id="div-root-blog-Content-title">2023-02-18&emsp;&emsp;<a href="htmls/Blogs/CSSQAS/20230204CSS.html"><b>CSS quick alignment software</b></a><br><samp id="smap-software">software</samp>&emsp;<samp id="smap-detail">Detail</samp>&emsp;</p>
+        <p id="div-root-blog-Content-title">2023-02-18&emsp;&emsp;<a href="htmls/Blogs/CSSQAS/20230204CSS.html"><b>CSS quick alignment</b></a><br><samp id="smap-software">software</samp>&emsp;<samp id="smap-detail">Detail</samp>&emsp;</p>
       </div>
     </div>
   </body>
