--- a/htmls/projects/CQA/20230204CSS.html
+++ b/htmls/projects/CQA/20230204CSS.html
@@ -35,7 +35,7 @@
               <td><b>Announcement time</b></td>
             </tr>
             <tr>
-              <td>Tumbleweed</td>
+              <td>CSS quick alignment</td>
               <td colspan="2">Feb 04,2023</td>
               <td>Jun 08,2023</td>
             </tr>
@@ -68,7 +68,7 @@
           </table>
         </div>
         <p id="div-root-content-Content-text">In the process of writing CSS, the file is often too large due to irregular writing, and the format and content of the CSS file can be optimized by using this software to reduce the file size.</p>
-        <p id="div-root-content-Content-note">This paper describes an executable program that can run under Microsoft Windows operating system, named "Tumbleweed" (referred to as "software" for short), and its version number is "V1.0". This software is registered by the National Copyright Administration of the People's Republic of China according to the relevant provisions in the Regulations of the People's Republic of China on the Protection of Computer Software and the Measures of the People's Republic of China on the Registration of Computer Software (Registration number "2023SR0597170"). According to the relevant provisions of the Bern Convention for the Protection of Literary and Artistic Works and the Copyright Law of the People's Republic of China, the copyright holder(s) shall enjoy full copyright and all other rights to the software.</p>
+        <p id="div-root-content-Content-note">This paper describes an executable program that can run under Microsoft Windows operating system, named "CSS quick alignment" (referred to as "software" for short), and its version number is "V1.0". This software is registered by the National Copyright Administration of the People's Republic of China according to the relevant provisions in the Regulations of the People's Republic of China on the Protection of Computer Software and the Measures of the People's Republic of China on the Registration of Computer Software (Registration number "2023SR0597171"). According to the relevant provisions of the Bern Convention for the Protection of Literary and Artistic Works and the Copyright Law of the People's Republic of China, the copyright holder(s) shall enjoy full copyright and all other rights to the software.</p>
       </div>
     </div>
   </body>
