--- a/htmls/Blogs/CSSQAS/20230204CSS.html
+++ b/htmls/Blogs/CSSQAS/20230204CSS.html
@@ -25,7 +25,7 @@
         <h1><a href="../../../blog.html">Blogs</a></h1>
       </header>
       <div class="div-root-content-Content">
-        <h3>CSS quick alignment software</h3>
+        <h3>CSS quick alignment</h3>
         <p id="div-root-content-Content-abstract">2023-02-18 | Detail</p>
         <div class="div-root-content-Content-table">
           <table>
