--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no">
     <meta name="author" content="Killmil Biratch">
 
-    <link rel="shortcut icon" href="resources/images/favicon.svg">
+    <link rel="shortcut Icon" href="resources/images/favicon.ico">
     <title>Killmil Biratch</title>
 
     <meta name="description" content="Personal website of Killmil Biratch">
