--- a/htmls/Blogs/Tumbleweed/20230223Tumbleweed.html
+++ b/htmls/Blogs/Tumbleweed/20230223Tumbleweed.html
@@ -62,6 +62,7 @@
         <p id="div-root-content-Content-text"><b>2023-12-21 V 1.2.2</b></p>
         <p id="div-root-content-Content-text">The software interface has been optimized.</p>
         <p id="div-root-content-Content-text">Remove redundant code and improve software code execution.</p>
+        <p id="div-root-content-Content-text"><b><i>Attachments and downloadable files</i></b></p>
         <p id="div-root-content-Content-attachmentEND"><a href="../../../resources/Attachments/blogs/20231221Tumbleweed/Tumbleweed V1.2.2Setup.msi"><i>Software Installation File (V 1.2.2)</i></a></p>
         <p id="div-root-content-Content-text"><b>2023-12-19 V 1.2.1</b></p>
         <p id="div-root-content-Content-text">A software boot interface has been added to improve the software boot speed.</p>
