--- a/about.html
+++ b/about.html
@@ -49,6 +49,16 @@
           <p><i>Bachelor of Engineering (Self-E.)</i></p>
           <p>Computer Science Technology</p>
         </div>
+        <h2 class="h2-about"></h2>
+        <h2 class="h2-about"></h2>
+        <h2 class="h2-about"></h2>
+        <h2 class="h2-about">Work Experience</h2>
+        <div class="div-root-about-EducationExperience-Details">
+          <p><b><a href="https://www.himile.com/">HIMILE GROUP CO.,LTD</a></b></p>
+          <p><a href="http://www.haomaizhizao.com/">HIMILE MECHANICAL MANUFACTURING (SHANDONG) CO., LTD</a></p>
+          <p>Deep Sea Project</p>
+          <p>Manufacturing Process Engineer</p>
+        </div>
       </div>
     </div>
   </body>
