--- a/about.html
+++ b/about.html
@@ -54,6 +54,11 @@
         <h2 class="h2-about"></h2>
         <h2 class="h2-about">Work Experience</h2>
         <div class="div-root-about-EducationExperience-Details">
+          <p><b><a href="https://std.nuc.edu.cn/info/1047/1750.htm">Shanxi Deep Hole Machining Engineering Technology Research Centre</a></b></p>
+          <p>Deep Hole Straightness Project</p>
+          <p>Research Assistant</p>
+        </div>
+        <div class="div-root-about-EducationExperience-Details">
           <p><b><a href="https://www.himile.com/">HIMILE GROUP CO.,LTD</a></b></p>
           <p><a href="http://www.haomaizhizao.com/">HIMILE MECHANICAL MANUFACTURING (SHANDONG) CO., LTD</a></p>
           <p>Deep Sea Project</p>
